--- a/metadata.yaml
+++ b/metadata.yaml
@@ -33,6 +33,7 @@ subjects:
 - !lcsh 'Adventure stories'
 - !lcsh 'Sea stories'
 - !lcc 'PR'
+- GITenberg
 title: "The King of Pirates\r\nBeing an Account of the Famous Enterprises of Captain\
   \ Avery, the Mock King of Madagascar"
 url: http://www.gutenberg.org/ebooks/37992
